RPS page fix
[FEAT] 	navbar always stays on top
[DESIGN] navbar update
[FIX] 	unwanted extra spaces
[FIX] 	RPS page too big

--- a/Content/master.css
+++ b/Content/master.css
@@ -13,6 +13,7 @@
     width: 100%;
     padding: 0px;
     display: block;
-    /* position: relative; */
+    position: fixed; 
+    z-index: 999;
     /* height: 100%; */
 }
