--- a/TemplateData/style.css
+++ b/TemplateData/style.css
@@ -1,4 +1,4 @@
-body { padding: 0; margin: 0 }
+body { padding: 0; margin: 0; height: 100%; overflow: hidden }
 #unity-container { position: relative }
 #unity-container.unity-desktop { left: 50%; top: 50%; transform: translate(-50%, -50%) }
 #unity-container.unity-mobile { width: 100%; height: 100% }
